# xinghuo-ui

./: Cargo.toml  Readme.md  test.rs
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs
crates/xinghuo-core/: Cargo.toml  Readme.md
crates/xinghuo-core/src/: app.rs  draw.rs  element.rs  elements.rs  error.rs  event.rs  id.rs  layer.rs  lib.rs  macros.rs  memory.rs  painter.rs
crates/xinghuo-geom/: Cargo.toml
crates/xinghuo-geom/src/: box2.rs  color.rs  lib.rs  quad.rs  rect.rs
crates/xinghuo-macro/: Cargo.toml
crates/xinghuo-macro/src/: element.rs  lib.rs  ui_view.rs
crates/xinghuo-ui/: Cargo.toml  Readme.md
crates/xinghuo-ui/examples/: test_ui_view.rs
crates/xinghuo-ui/src/: app.rs  context.rs  elements.rs  event.rs  lib.rs  macros.rs  node.rs
crates/xinghuo-wgpu/: Cargo.toml
crates/xinghuo-wgpu/examples/: test_window.rs
crates/xinghuo-wgpu/src/: draw_pipe.rs  error.rs  lib.rs  painter.rs  pipeline.rs  quad.rs  shader_rectangle.rs  shaders.rs  shape.rs  state.rs  texture.rs  window.rs  window1.rs
crates/xinghuo-wgpu/src/shaders/: geometry.wgsl  quad.wgsl
examples/: test.rs  test_ui_view.rs
frame/examples/: demo.rs
src/: lib.rs
