[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
# winit = "0.26.1"
winit = { git = "https://github.com/rust-windowing/winit" }
# tao = "0.8.2"
epaint = "0.17.0"
image = "0.24.1"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.6"

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30
