[package]
name = "xinghuo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xinghuo-geom = { path = "../xinghuo-geom" }
xinghuo-macro = { path = "../xinghuo-macro" }
paste = "1.0.7"
rctree = "0.4.0"
parking_lot = "0.12.0"
# winit = "0.26.1"
winit = { git = "https://github.com/rust-windowing/winit" }
# tao = "0.8.2"
# image = "0.24.1"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
euclid = "0.22.7"
lyon = "0.17.10"
thiserror = "1.0.31"
