[package]
name = "xinghuo-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xinghuo-macro = { path = "../xinghuo-macro" }
derive_builder = "0.11.2"
parking_lot = "0.12.0"
paste = "1.0.7"
rctree = "0.4.0"
# winit = "0.26.1"
winit = { git = "https://github.com/rust-windowing/winit" }
# tao = "0.8.2"
epaint = "0.17.0"
image = "0.24.1"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"