[package]
name = "xinghuo-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xinghuo-ui = { path = "../xinghuo-ui" }
wgpu = "0.12.0"
raw-window-handle = "0.4.3"
bytemuck = { version = "1.9.1", features = ["derive"] }
pollster = "0.2.5"
thiserror = "1.0.30"
tracing = "0.1.34"
epaint = { version = "0.17.0", features = ["convert_bytemuck"] }
cgmath = "0.18.0"
winit = { git = "https://github.com/rust-windowing/winit" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
